Removed previously fixed issue since it would resize certain spacing

--- a/style.css
+++ b/style.css
@@ -57,12 +57,6 @@ main {
 
 .card-description {
     color: hsla(0, 0%, 100%, 0.75);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 5;
-            line-clamp: 5; 
-    -webkit-box-orient: vertical;
 }
 
 .button {
